src/components/Note/_note.scss
@use '../../assets/sass/colors';
@use '../../assets/sass/default.styles' as default;

@mixin grid {
  display: flex;
  flex-direction: column;
  height: 100vh;
}

@mixin footer {
  position: fixed;
  bottom: 0;
  display: flex;
  width: 100%;
  height: 70px;
  padding: 20px 10px;
  background-color: colors.$darkTheme;
  color: colors.$themeWhite;
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
  transition: box-shadow 0.2s, background-color 0.2s;
  justify-content: space-between;

  Button {
    margin: 0 5px;
  }

  p {
    margin: 0 10px;
  }
}

.CodeMirror {
  background-color: default.$backgroundColor !important;
  color: default.$textColor !important;
  border: none !important;
  font-family: inherit;
}

.ͼ15,
.ͼ2 .cm-activeLine {
  background-color: default.$backgroundColor !important;
  color: default.$textColor !important;
}

.ͼ4 .cm-line {
  caret-color: default.$textColor !important;
}

